<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    tools:context=".GameActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        android:text="@string/highscores_screen_title"
        android:textSize="30sp" />

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/highscores_column_place"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/highscores_column_result"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/highscores_column_timestamp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</LinearLayout>
